--- a/backend/package.json
+++ b/backend/package.json
@@ -5,25 +5,26 @@
     "main": "app.js",
     "type": "module",
     "scripts": {
-      "start:dev": "nodemon app.js",
-      "format": "npx prettier --write .",
-      "start": "node app.js"
+        "start:dev": "nodemon app.js",
+        "format": "npx prettier --write .",
+        "start": "node app.js"
     },
     "author": "",
     "license": "",
     "dependencies": {
-      "bcrypt": "^5.1.0",
-      "body-parser": "^1.20.1",
-      "cookie": "^0.5.0",
-      "cors": "^2.8.5",
-      "express": "^4.19.2",
-      "express-session": "^1.18.0",
-      "multer": "^1.4.5-lts.1",
-      "sequelize": "^6.37.3",
-      "sqlite3": "^5.1.7"
+        "bcrypt": "^5.1.0",
+        "body-parser": "^1.20.1",
+        "cookie": "^0.5.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "express-session": "^1.18.0",
+        "multer": "^1.4.5-lts.1",
+        "pg": "^8.12.0",
+        "sequelize": "^6.37.3"
     },
     "devDependencies": {
-      "nodemon": "^2.0.22",
-      "prettier": "^2.8.8"
+        "nodemon": "^2.0.22",
+        "prettier": "^2.8.8"
     }
-  }
+}
