--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
         "bcrypt": "^5.1.0",
         "body-parser": "^1.20.1",
         "cookie": "^0.5.0",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
