--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
         "express-session": "^1.18.0",
         "multer": "^1.4.5-lts.1",
         "pg": "^8.12.0",
-        "sequelize": "^6.37.3"
+        "sequelize": "^6.37.3",
+        "sqlite3": "^5.1.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.22",
