--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -36,7 +36,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
+              "src/styles.css"
             ],
             "scripts": []
           },
