--- a/workflows/build-frontend.yml
+++ b/workflows/build-frontend.yml
@@ -5,9 +5,9 @@ on:
     # Only run this workflow if it is a commit to main.
     branches:
       - main
-    # Only run this workflow if the commit has modified files from frontend
-    paths:
-      - frontend/**
+    # # Only run this workflow if the commit has modified files from frontend
+    # paths:
+    #   - frontend/**
 
 env:
   IMAGE_NAME: frontend-net-nurture
