modified endpoints in frontend and backend to use domain instead of localhost

--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -2,9 +2,9 @@ name: frontend
 
 on:
   push:
-    # # Only run this workflow if the commit has modified files from frontend
-    # paths:
-    #   - frontend/**
+    # Only run this workflow if the commit has modified files from frontend
+    paths:
+      - frontend/**
 
 env:
   IMAGE_NAME: frontend-net-nurture
