--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -2,9 +2,9 @@ name: backend
 
 on:
   push:
-    # # Only run this workflow if the commit has modified files from backend
-    # paths:
-    #   - backend/**
+    # Only run this workflow if the commit has modified files from backend
+    paths:
+      - backend/**
 
 env:
   IMAGE_NAME: backend-net-nurture
