--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     volumes_from:
       - nginx-proxy
   frontend:
-    image: ghcr.io/utsc-cscc09-programming-on-the-web/frontend-net-nurture
+    image: ghcr.io/utsc-cscc09-programming-on-the-web/frontend-net-nurture:config-workflows
     container_name: frontend
     restart: always
     expose:
@@ -37,7 +37,7 @@ services:
       - VIRTUAL_HOST=net-nurture.com
       - LETSENCRYPT_HOST=net-nurture.com
   backend:
-    image: ghcr.io/utsc-cscc09-programming-on-the-web/backend-net-nurture
+    image: ghcr.io/utsc-cscc09-programming-on-the-web/backend-net-nurture:config-workflows
     container_name: backend
     restart: always
     expose:
