revised build-services to deploy on each push

--- a/.github/workflows/build-services.yml
+++ b/.github/workflows/build-services.yml
@@ -1,6 +1,7 @@
 name: Redeploy
 
 on:
+  push:
   # Only trigger, when the build workflow succeeded
   workflow_run:
     workflows: ["frontend", "backend"]
