setup psql db on vm + added env file in backend

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -8,4 +8,5 @@ uploads
 *.sqlite
 
 # dotenv environment variables file
-.env
+# .env
+# .env is included for deployment purposes. It should not be included in the repository.
