--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,7 +4,7 @@ FROM node:22-alpine3.19 as build
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
-COPY package-lock.json ./
+RUN npm install --package-lock-only
 RUN npm ci
 COPY . ./
 RUN npm run build
