--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -2,6 +2,9 @@ name: frontend
 
 on:
   push:
+    # Only run this workflow if it is a commit to main.
+    branches:
+      - deployment
     # Only run this workflow if the commit has modified files from frontend
     paths:
       - frontend/**
