--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -2,6 +2,9 @@ name: backend
 
 on:
   push:
+    # Only run this workflow if it is a commit to main.
+    branches:
+      - deployment
     # Only run this workflow if the commit has modified files from backend
     paths:
       - backend/**
