--- a/.github/workflows/build-services.yml
+++ b/.github/workflows/build-services.yml
@@ -3,7 +3,7 @@ name: Redeploy
 on:
   push:
     branches:
-      - deployment
+      - main
   # Only trigger, when the build workflow succeeded
   workflow_run:
     workflows: ["frontend", "backend"]
