--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -35,7 +35,7 @@
               }
             ],
             "styles": ["src/styles.css"],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
