fixed build-services workflow

--- a/.github/workflows/build-services.yml
+++ b/.github/workflows/build-services.yml
@@ -6,7 +6,7 @@ on:
       - main
   # Only trigger, when the build workflow succeeded
   workflow_run:
-    workflows: ["frontend", "backend"]
+    workflows: [frontend, backend]
     types:
       - completed
 
