--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,13 +4,13 @@ FROM node:22-alpine3.19 as build
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
-RUN npm i --package-lock-only
-RUN npm ci
+COPY package-lock.json ./
+RUN npm ci --silent
 COPY . ./
 RUN npm run build
 
 # Serve these static files with NGINX.
-FROM nginx:1.26.1-alpine
-COPY --from=build /app/dist/frontend /usr/share/nginx/html
+FROM nginx:1.26.1-alpine3.19
+COPY --from=build /app/dist/browser/frontend /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
