--- a/.github/workflows/build-services.yml
+++ b/.github/workflows/build-services.yml
@@ -26,4 +26,4 @@ jobs:
           script: |
             echo "${{ secrets.CR_PAT }}" | sudo docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
             sudo docker compose down
-            sudo docker compose pull && sudo docker compose up
+            sudo docker compose pull && sudo docker compose up -d
