--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,7 +9,7 @@ RUN npm ci
 COPY . ./
 RUN npm run build
 
-# Serve these static files with NGINX
+# Serve these static files with NGINX.
 FROM nginx:1.26.1-alpine3.19
 COPY --from=build /app/dist/frontend/browser /usr/share/nginx/html
 EXPOSE 80
