final fix for workflow run order

--- a/.github/workflows/build-services.yml
+++ b/.github/workflows/build-services.yml
@@ -1,12 +1,9 @@
 name: Redeploy
 
 on:
-  push:
-    branches:
-      - main
   # Only trigger, when the build workflow succeeded
   workflow_run:
-    workflows: ["frontend", "backend"]
+    workflows: [frontend, backend]
     types:
       - completed
 
