--- a/backend/.env_example
+++ b/backend/.env_example
@@ -7,19 +7,9 @@ DB_NAME_DEV=your_dev_database_name
 DB_HOST_DEV=127.0.0.1
 DB_PORT_DEV=5432
 
-# Test environment
-DB_USERNAME_TEST=your_test_username
-DB_PASSWORD_TEST=your_test_password
-DB_NAME_TEST=your_test_database_name
-DB_HOST_TEST=127.0.0.1
-DB_PORT_TEST=5432
+JWT_SECRET=653B57D6DBCBFA44A15DD7B2FF9B2
 
-# Production environment
-DB_USERNAME_PROD=your_prod_username
-DB_PASSWORD_PROD=your_prod_password
-DB_NAME_PROD=your_prod_database_name
-DB_HOST_PROD=127.0.0.1
-DB_PORT_PROD=5432
-
+GOOGLE_CLIENT_ID=1058614153442-ud88lvna00od88q7qc3covgdr8s89bc6.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 # Common settings
 NODE_ENV=development
