--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
         "googleapis": "^140.0.1",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
+        "node-cron": "^3.0.3",
         "node-fetch": "^3.3.2",
         "pg": "^8.12.0",
         "sequelize": "^6.37.3",
