develop: remove sensitive info in .env_example

--- a/backend/.env_example
+++ b/backend/.env_example
@@ -7,9 +7,8 @@ DB_NAME_DEV=your_dev_database_name
 DB_HOST_DEV=127.0.0.1
 DB_PORT_DEV=5432
 
-JWT_SECRET=653B57D6DBCBFA44A15DD7B2FF9B2
+JWT_SECRET=your_secret
 
 GOOGLE_CLIENT_ID=1058614153442-ud88lvna00od88q7qc3covgdr8s89bc6.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-# Common settings
+GOOGLE_CLIENT_SECRET=your_google_client_secret
 NODE_ENV=development
