added .env file to vm, and configuring docker compose accordingly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,3 +45,5 @@ services:
     environment:
       - VIRTUAL_HOST=api.net-nurture.com
       - LETSENCRYPT_HOST=api.net-nurture.com
+    env_file:
+      - .env
