--- a/.github/workflows/build-services.yml
+++ b/.github/workflows/build-services.yml
@@ -3,7 +3,7 @@ name: CD / Deploy
 on:
   # Only trigger, when the build workflow succeeded
   workflow_run:
-    workflows: [CI frontend, CI backend]
+    workflows: ["CI frontend", "CI backend"]
     types:
       - completed
 
