--- a/.github/workflows/build-services.yml
+++ b/.github/workflows/build-services.yml
@@ -1,4 +1,4 @@
-name: CD / Deploy
+name: CD
 
 on:
   push:
@@ -12,9 +12,8 @@ on:
 
 jobs:
   # Deploy on VM
-  on-success:
+  deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: run compose up
         uses: appleboy/ssh-action@v1.0.3
