--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "",
     "dependencies": {
+        "@google/generative-ai": "^0.15.0",
         "bcrypt": "^5.1.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.1",
