--- a/.github/workflows/build-services.yml
+++ b/.github/workflows/build-services.yml
@@ -21,4 +21,5 @@ jobs:
           script: |
             echo "${{ secrets.CR_PAT }}" | sudo docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
             sudo docker compose down
+            echo y | sudo docker system prune
             sudo docker compose pull && sudo docker compose up -d
